# Otus

./: .gitignore  .gitmodules  annotated.html  classes.html  dir_000001_000000.html  dir_000004_000001.html  dir_48ab432724e0134e32bac0abe234301f.html  dir_48ab432724e0134e32bac0abe234301f_dep.map  dir_48ab432724e0134e32bac0abe234301f_dep.md5  dir_59ead0217c6b7f1abb751ba307c7e965.html  dir_59ead0217c6b7f1abb751ba307c7e965_dep.map  dir_59ead0217c6b7f1abb751ba307c7e965_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7a496171bb1761c9e30edcc89132c781.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f780f91b554e71f59e643536795ff562.html  dir_f780f91b554e71f59e643536795ff562_dep.map  dir_f780f91b554e71f59e643536795ff562_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  (+24 more)
HT1/: CMakeLists.txt  build.bat  build.sh  lib.cpp  project_meta_data.h.in
HT1/HelloProject/: Build.bat  Build.sh  CMakeLists.txt  HelloClass.cpp  HelloClass.h  Lib.cpp  TestVersion.cpp  Version.h.in  main.cpp
HT2/ip_filter/: CMakeLists.txt  ip.h  main.cpp
HW1/: CMakeLists.txt  build.bat  build.sh  lib.cpp  main.cpp
HW10/bulker_lib/: CMakeLists.txt
HW11/db_lib/: CMakeLists.txt
HW11/src_server/: CMakeLists.txt  database_error_stringifier.h  main.cpp  request.h  request_factory.h  request_processor.h  server.h  session.cpp  session.h
HW12/: CMakeLists.txt  build_and_install.sh  mean_output.txt  run_mean.bat
HW12/map_dispersion/: CMakeLists.txt  main.cpp
HW12/map_mean/: CMakeLists.txt  main.cpp
HW12/map_reduce_dispersion/: CMakeLists.txt
HW12/map_reduce_lib/: CMakeLists.txt
HW12/map_reduce_mean/: CMakeLists.txt
HW12/reduce_dispersion/: CMakeLists.txt  main.cpp
HW12/reduce_mean/: CMakeLists.txt  main.cpp
HW12/results/: mean_output.txt
HW12/results/tests/: d_result_test3-sanity.txt  d_result_test4-sanity.txt  m_result_test3-sanity.txt  result_test3-sanity.txt  result_test4-sanity.txt
HW12/run_scripts/: calculate_test_dispersions.bat  calculate_test_dispersions.sh  calculate_test_means.bat  calculate_test_means.sh  run_dispersion.bat  run_locally.sh  run_mean.bat
HW12/source_data/test_data/: test1-zeros.txt
HW12/test_scripts/: calculate_test_means.bat  calculate_test_means.sh  variance.py
HW12/tests/: test.cpp
HW13/: CMakeLists.txt  build_and_install.sh  run.sh
HW13/driver/: CMakeLists.txt  main.cpp
HW13/tests/: CMakeLists.txt  test.cpp
HW2/: CMakeLists.txt  CMakePresets.json  build.bat  expected.md5  ip_filter_test1.tsv  result.tsv
HW2/ip_filter/: CMakeLists.txt  ip.cpp  ip.h  main.cpp
HW2/ip_filter/tests/: ip_read_operator_test.cpp
HW2/ip_lib/: CMakeLists.txt
HW2/ip_lib/src/: ip.cpp
HW2/src/: ip.cpp  main.cpp
HW2/tests/: CMakeLists.txt  ip_read_operator_test.cpp  ip_stream_operators_test.cpp  test_filters.cpp  test_ip_reading.cpp
HW3/: CMakeLists.txt  CMakePresets.json
HW3/allocator_driver/: CMakeLists.txt  main.cpp
HW3/allocator_lib/: CMakeLists.txt
HW3/allocator_lib/src/: chunk_memory_manager.cpp  memory_manager_allocator.cpp
HW3/benchmark/: CMakeLists.txt  main.cpp
HW3/cc_lib/: CMakeLists.txt
HW3/src/: main.cpp
HW3/tests/: CMakeLists.txt  chunk_memory_manager_tests.cpp  forward_list_test.cpp  memory_manager_allocator_tests.cpp
HW3/tools/: benchmark_comparison.bat
HW4/: CMakeLists.txt  CMakePresets.json  Doxyfile  build.bat
HW4/doc/html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespacedetails.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  print__ip_8h.html  print__ip_8h__incl.map  print__ip_8h_source.html
HW4/include/: print_ip.h
HW4/src/: main.cpp
HW4/tests/: CMakeLists.txt  sanity_check.cpp  test.cpp
HW5/editor_lib/: CMakeLists.txt
HW6/matrix_lib/: CMakeLists.txt
HW6/src/: CMakeLists.txt  main.cpp
HW7/bulker_lib/: CMakeLists.txt
HW8/: CMakeLists.txt  readme.MD
HW8/duplicate_finder_lib/: CMakeLists.txt
HW8/src/: main.cpp
HW8/tests/: CMakeLists.txt  test.cpp
ProjectSokoban2/: CMakeLists.txt  Sokoban2 project description.txt  doxygen.cfg
ProjectSokoban2/docs/html/: annotated.html  classes.html  dir_000000_000004.html  dir_000005_000002.html  dir_000005_000009.html  dir_000006_000004.html  dir_000009_000005.html  dir_0d1f82ea846d8a04bb787064fdf54048.html  dir_0d1f82ea846d8a04bb787064fdf54048_dep.map  dir_0d1f82ea846d8a04bb787064fdf54048_dep.md5  dir_0d587610e296f365a615c34eea315c88.html  dir_0d587610e296f365a615c34eea315c88_dep.map  dir_35890192018e14a116bf351332524fcb.html  dir_35890192018e14a116bf351332524fcb_dep.map  dir_451b2fc8d752387d7b243d9d6d36d2d0.html  dir_451b2fc8d752387d7b243d9d6d36d2d0_dep.map  dir_451b2fc8d752387d7b243d9d6d36d2d0_dep.md5  dir_87b8a4fa812bdb1438265b8e67ea94a8.html  dir_87b8a4fa812bdb1438265b8e67ea94a8_dep.map  dir_88b4b7a1f11369b588a9566dbd08dfb3.html  dir_88b4b7a1f11369b588a9566dbd08dfb3_dep.map  dir_88b4b7a1f11369b588a9566dbd08dfb3_dep.md5  dir_9d29c049d956ca37feb5082385e696d9.html  dir_9d29c049d956ca37feb5082385e696d9_dep.map  dir_b172f41db60c4163435424fb2fcda0e3.html  dir_b172f41db60c4163435424fb2fcda0e3_dep.map  (+84 more)
ProjectSokoban2/lib_base_game/: CMakeLists.txt
ProjectSokoban2/lib_mod_example/: CMakeLists.txt
ProjectSokoban2/lib_sokoban_core/: CMakeLists.txt
ProjectSokoban2/sokoban_base_data/: level2.lm  object_ids.json  players.json
ProjectSokoban2/sokoban_core_lib/: CMakeLists.txt
ProjectSokoban2/sokoban_driver/: CMakeLists.txt  main.cpp  mod_dynamic_library.hpp
ProjectSokoban2/tests/: CMakeLists.txt  test.cpp
(+1334 files in other folders)
